[tool.poetry]
name = "redisbloom-py"
version = "0.4.1"
description = "RedisBloom Python Client"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
    { include = 'redisbloom' },
]

[tool.poetry.dependencies]
python = "3.6"
hiredis = "^2.0.0"
redis = "^3.5.3"
rmtest = "^0.7.0"
six = "^1.16.0"

classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 2.7',
    'Topic :: Database'
]

keywords = 'Redis Extension Probabilistic TopK Cuckoo-Filter Bloom-Filter Count-min-sketch'

[tool.poetry.urls]
url = "https://redisbloom.io"
repository = "https://github.com/RedisBloom/redisbloom-py"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
