[tool.poetry]
name = "redisbloom-py"
version = "0.4.1"
description = "RedisBloom Python Client"
authors = ["Redis <oss@.com>"]
license = "BSD-3-Clause"
readme = "README.md"

packages = [
    { include = 'redisbloom' },
]

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'
]
keywords = ["Redis", "Extension", "Probabilistic", "TopK", "Cuckoo-Filter", "Bloom-Filter", "Count-min-sketch"]

[tool.poetry.dependencies]
python = "^3.6"
hiredis = "^2.0.0"
redis = "^3.5.3"
rmtest = "^0.7.0"
six = "^1.16.0"


[tool.poetry.urls]
url = "https://redisbloom.io"
repository = "https://github.com/RedisBloom/redisbloom-py"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"
tox = "^3.23.1"
tox-poetry = "^0.3.0"
bandit = "^1.7.0"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
